<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <ScrollView
        android:id="@+id/scroll_note"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_x="0px"
        android:layout_y="25px"
        android:scrollbars="vertical"
        android:fillViewport="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uef_sm2"
                    android:background="@drawable/border"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/txtResultat1"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/math_sm2"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physique_sm2"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chimie_sm2"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uem_sm2"
                    android:background="@drawable/border"
                    android:textStyle="bold|italic" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/txtResultat2"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tp_physique_sm2"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tp_chimie_sm2"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inf_sm2"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ued_sm2"
                    android:background="@drawable/border"
                    android:textStyle="bold|italic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/txtResultat3"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/economie_sm"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/histoire_sience"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uet_sm2"
                    android:background="@drawable/border"
                    android:textStyle="bold|italic" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/txtResultat4"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/langue2"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />
                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="@dimen/note"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Calcule"
                        android:id="@+id/btn_calcule"
                        android:onClick="afficher"
                        android:textColor="#ffffff"
                        android:background="@drawable/button"
                        android:layout_alignTop="@+id/btn_efface"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="EFFACER"
                        android:id="@+id/btn_efface"
                        android:onClick="effacer"
                        android:textColor="#ffffff"
                        android:background="@drawable/button"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />



                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>




</LinearLayout>